--- a/calculator/calculator.html
+++ b/calculator/calculator.html
@@ -31,6 +31,7 @@
         <button type="button" value="=">=</button>
         <button class="btn btn-success col-md-3" type="button" value="AC">AC</button>
         <button class="btn btn-danger col-md-3" type="button" value="OFF">OFF</button>
+        <button class="btn btn-warning col-md-3" type="button" value="ON">ON</button>
       </div>
     </div>
 
