--- a/calculator/calculator.html
+++ b/calculator/calculator.html
@@ -29,6 +29,7 @@
         <button type="button" value="*">*</button>
         <button type="button" value="/">/</button>
         <button type="button" value="=">=</button>
+        <button class="btn btn-info col-md-3" type="button" value="DEL">DEL</button>
         <button class="btn btn-success col-md-3" type="button" value="AC">AC</button>
         <button class="btn btn-danger col-md-3" type="button" value="OFF">OFF</button>
         <button class="btn btn-warning col-md-3" type="button" value="ON">ON</button>
