--- a/weatherForecastUsingAPIs/index.html
+++ b/weatherForecastUsingAPIs/index.html
@@ -59,7 +59,7 @@
       <p>Min Temp: <span id="minTemp"></span></p>
     </div>
     <div id="div2">
-      <input type="text" id="city">
+      <input type="text" id="city" placeholder="Enter City Name to check its weather...">
       <button type="button" onclick="update()">Update</button>
       <button type="button" onclick="retrieve()"> Forecast !! </button>
     </div>
